test/negative/233_recovery_match_arms.err
233_recovery_match_arms.fx:6:12: error: the appropriate match for 'undef_a' of type 'int' is not found.
233_recovery_match_arms.fx:7:12: error: the appropriate match for 'undef_b' of type 'int' is not found.

2 errors occured during type checking.
